added quantity management in cart

--- a/views/admin/usersList.ejs
+++ b/views/admin/usersList.ejs
@@ -333,7 +333,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- Main Script -->
 <script src="/admin-assets/js/main.js" type="text/javascript"></script>
-<script>
+<!-- <script>
             document.addEventListener('DOMContentLoaded', function () {
             console.log("dom loaded")
             const blockButtons = document.querySelectorAll('.block-btn');
@@ -387,7 +387,7 @@
         });
     });
 });
-</script>
+</script> -->
 </body>
 
 
