--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -502,6 +502,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main Script -->
     <script src="/admin-assets/js/main.js" type="text/javascript"></script>
+    <!-- category frontend validation -->
     <script>
         function validateCategoryName(){
             var categoryName = document.getElementById('category_name').value;
@@ -527,7 +528,9 @@
             }
         }
     </script>
-    <script>
+
+    <!-- list category using fetch -->
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function () {
         console.log("dom loaded")
         const listbuttons = document.querySelectorAll('.list-btn');
@@ -543,6 +546,10 @@
             const categoryData = await response.json();
             console.log('categoryData', categoryData);
             if (categoryData.success) {
+                this.textContent = "UnList";
+                this.style.backgroundColor = 'red';
+                // this.classList.replace("list-btn", "unlist-btn");
+
                 console.log("success");                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
                 swal.fire({
                     icon: 'success',
@@ -553,9 +560,9 @@
         });
     });
     }); 
-    </script>
-    
-    <script>
+    </script> -->
+    <!-- unlist category using fetch -->
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function () {
         console.log("dom loaded")
         const unlistButtons = document.querySelectorAll('.unlist-btn');
@@ -571,7 +578,12 @@
             const categoryData = await response.json();
             console.log('categoryData', categoryData);
             if (categoryData.success) {
-                console.log("success");                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+                console.log("success");  
+                this.textContent = "List";
+                this.style.backgroundColor = 'green';
+                // this.classList.replace("unlist-btn", "list-btn");
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
                 swal.fire({
                     icon: 'success',
                     title: 'Unlisted Category',
@@ -581,7 +593,7 @@
         });
     });
     }); 
-    </script>
+    </script> -->
 </body>
 
 
