--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -632,7 +632,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main Script -->
     <script src="/admin-assets/js/main.js" type="text/javascript"></script>
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function () {
         console.log("dom loaded")
         const listbuttons = document.querySelectorAll('.list-btn');
@@ -686,7 +686,7 @@
     });
 });
 }); 
-</script>
+</script> -->
 
 
 </body>
